# sixpack

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TENSACK_BOOK.md  TENSACK_IMPLEMENTATION_STATUS.md  TENSACK_PLAN_SPEC.md  justfile
apps/landing-page/: README.md  index.html  package.json
apps/landing-page/src/: content.config.ts
apps/landing-page/src/content/docs/: ai-chat-notes.md  api.md  architecture.md  commands.md  file-format.md  overview.md
apps/landing-page/src/layouts/: BaseLayout.astro  DocsLayout.astro
apps/landing-page/src/pages/: index.astro
apps/landing-page/src/pages/docs/: [...slug].astro  architecture.astro  index.astro  overview.astro
apps/landing-page/src/styles/: global.css
apps/test-lab/: README.md
apps/test-lab/ai-chat-notes/: Cargo.toml  README.md  build.rs  schema.sixpack
apps/test-lab/ai-chat-notes/src/: main.rs
apps/test-lab/fixtures/: sample_snapshot.json
apps/test-lab/note-taking-init/: Cargo.toml  README.md
apps/test-lab/note-taking-init/src/: main.rs
apps/test-lab/note-taking-playground/: Cargo.toml
benchmark/: Cargo.toml  README.md
benchmark/benches/: agent_jsonl.rs  cache_reopen.rs  hot_path.rs
benchmark/tests/: sqlite_parity.rs
book/: 03-generated-api.md  05-storage.md  07-implementation-status.md  08-package-boundaries.md  11-testing.md  12-schema-compiler.md  13-sqlite-mapping.md  14-write-engine.md
book/reference/: sixpack_functional_addendum.md  sixpack_implementation_status.md
docs/: file-format.md  project-specs.md
